k8s/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockrock
  namespace: platform
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: stockrock
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stockrock
    spec:
      containers:
        - name: stockrock
          image: jmickey/stockrock:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: stockrock-port
          resources:
            requests:
              memory: 64Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /healthz
              port: stockrock-port
          readinessProbe:
            httpGet:
              path: /healthz
              port: stockrock-port
