k8s/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockrock-svc
  namespace: platform
spec:
  selector:
    app.kubernetes.io/name: stockrock
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
  type: NodePort
